# user_service

./: .clangd  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  secure_data.json  static_config.yaml
docs/yaml/: openapi.yaml
postgresql/schemas/: db_1.sql
proto/handlers/: user.proto
src/: main.cpp
src/components/auth_checker/auth_checker_bearer/: component.cpp  component.hpp
src/components/auth_checker/auth_checker_bearer_factory/: component.cpp  component.hpp  secdist_config.cpp  secdist_config.hpp
src/components/auth_checker/dto/: token.hpp
src/components/auth_checker/utils/: jwt.cpp  jwt.hpp
src/components/user_manager/: component.cpp  component.hpp
src/dto/: user.hpp
src/handlers/internal/v1/user/: handler.cpp  handler.hpp
src/models/: user.hpp
src/sql/: insert_user.sql  select_user_by_phone_number.sql  select_user_by_uuid.sql
tests/: conftest.py  test_ex.py
